--- a/css/chessground.base.css
+++ b/css/chessground.base.css
@@ -1,13 +1,16 @@
 html {
-    font-family: 'Noto Sans', Sans-Serif
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    font-family: 'Noto Sans', Sans-Serif;
+    font-size: 12px;
 }
 
 .ninja-title, .site-title {
-    font-family: 'Noto Sans', Sans-Serif
+    font-family: 'Noto Sans', Sans-Serif;
 }
 
 h1, h2, h3, h4, .mini-game .rating, .mini-game__clock, .btn-rack__btn i, .btn-rack form i {
-    font-family: 'Roboto', Sans-Serif
+    font-family: 'Roboto', Sans-Serif;
 }
 
 .button {
@@ -178,15 +181,6 @@ h1, h2, h3, h4, .mini-game .rating, .mini-game__clock, .btn-rack__btn i, .btn-ra
     font-weight: 300;
     src: local("Roboto Light"), local("Roboto-Light"), url(../font/roboto-light-latin.woff2) format("woff2");
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD
-}
-
-html {
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale
-}
-
-html {
-    font-size: 12px
 }
 
 .cg-wrap {
